drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog

SVN TRUNK

- Classic ADSR replaced by custom one-shot drum-mode specific envelope
  generators (Attack, Delay1, Level2, Delay2). (EXPERIMENTAL)

- Detached generic double-linked list class into its own header.


0.0.0  2012-10-03  Initial change-log entry.